# gst-chromaprint

./: .bzrignore  AUTHORS  Makefile.am  README  configure.ac
examples/: Makefile.am  gst-acoustid-query.py
src/: Makefile.am  gstchromaprint.c
